--- a/linked_list/Makefile
+++ b/linked_list/Makefile
@@ -1,10 +1,10 @@
 CC  = gcc
 APP = linked_list
 
-all: linked_list
+all: app
 
 clean:
 	rm -f $(APP)
 
-linked_list:
+app:
 	$(CC) $(APP).c -o $(APP)
