--- a/.gitignore
+++ b/.gitignore
@@ -2,6 +2,7 @@ linked_list/linked_list
 cunit/cunit
 cunit/temp.txt
 fork/fork
+fork/fork2
 prod_cons/prod_cons
 polymorph/polymorph
 io_square/io_square
